--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -3,11 +3,11 @@
 		<Nullable>enable</Nullable>
 		<LangVersion>latest</LangVersion>
 		<CodeAnalysisRuleSet>..\..\Rules.ruleset</CodeAnalysisRuleSet>
-		<TreatWarningsAsErrors>false</TreatWarningsAsErrors>
+		<TreatWarningsAsErrors>true</TreatWarningsAsErrors>
 		<AnalysisMode>AllEnabledByDefault</AnalysisMode>
 		<AnalysisLevel>latest</AnalysisLevel>
 		<ImplicitUsings>enable</ImplicitUsings>
-		<NoWarn>NU1902</NoWarn>
+		<NoWarn>NU1902,NU1903</NoWarn>
 	</PropertyGroup>
 
 	<ItemGroup>
