--- a/src/EchoSphere.UsersApi/Properties/launchSettings.json
+++ b/src/EchoSphere.UsersApi/Properties/launchSettings.json
@@ -1,12 +1,11 @@
-{
+﻿{
   "$schema": "https://json.schemastore.org/launchsettings.json",
   "profiles": {
     "http": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "launchUrl": "/",
-      "applicationUrl": "http://localhost:5353",
+      "launchBrowser": false,
+      "applicationUrl": "http://localhost:5033",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -14,9 +13,8 @@
     "https": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "launchUrl": "/",
-      "applicationUrl": "https://localhost:7336;http://localhost:5353",
+      "launchBrowser": false,
+      "applicationUrl": "https://localhost:7212;http://localhost:5033",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
