--- a/src/EchoSphere.Messages.Api/EchoSphere.Messages.Api.csproj
+++ b/src/EchoSphere.Messages.Api/EchoSphere.Messages.Api.csproj
@@ -1,18 +1,21 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
+	<PropertyGroup>
+		<Protobuf_StandardImportsPath>$(Protobuf_StandardImportsPath);$(MSBuildProjectDirectory)\..\..\Protos</Protobuf_StandardImportsPath>
+	</PropertyGroup>
 
 	<ItemGroup>
-		<Protobuf Include="Protos\messages.proto" GrpcServices="Server" />
+		<Protobuf Include="models.proto" GrpcServices="none"/>
+		<Protobuf Include="Protos\messages.proto" GrpcServices="Server"/>
 	</ItemGroup>
 
 	<ItemGroup>
 		<PackageReference Include="Grpc.AspNetCore" Version="2.65.0"/>
-		<PackageReference Include="System.Linq.Async" Version="6.0.1" />
+		<PackageReference Include="System.Linq.Async" Version="6.0.1"/>
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\EchoSphere.Infrastructure.Db\EchoSphere.Infrastructure.Db.csproj" />
-		<ProjectReference Include="..\EchoSphere.Messages.Abstractions\EchoSphere.Messages.Abstractions.csproj" />
+		<ProjectReference Include="..\EchoSphere.Infrastructure.Db\EchoSphere.Infrastructure.Db.csproj"/>
+		<ProjectReference Include="..\EchoSphere.Messages.Abstractions\EchoSphere.Messages.Abstractions.csproj"/>
 		<ProjectReference Include="..\EchoSphere.ServiceDefaults\EchoSphere.ServiceDefaults.csproj"/>
 	</ItemGroup>
-
 </Project>
