--- a/src/EchoSphere.Users.Api/EchoSphere.Users.Api.csproj
+++ b/src/EchoSphere.Users.Api/EchoSphere.Users.Api.csproj
@@ -1,6 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
+	<PropertyGroup>
+		<Protobuf_StandardImportsPath>$(Protobuf_StandardImportsPath);$(MSBuildProjectDirectory)\..\..\Protos</Protobuf_StandardImportsPath>
+	</PropertyGroup>
+
 	<ItemGroup>
+		<Protobuf Include="models.proto" GrpcServices="none"/>
 		<Protobuf Include="Protos\users.proto" GrpcServices="Server"/>
 	</ItemGroup>
 
@@ -11,6 +16,7 @@
 	<ItemGroup>
 		<ProjectReference Include="..\EchoSphere.Infrastructure.Db\EchoSphere.Infrastructure.Db.csproj"/>
 		<ProjectReference Include="..\EchoSphere.ServiceDefaults\EchoSphere.ServiceDefaults.csproj" />
+		<ProjectReference Include="..\EchoSphere.Users.Abstractions\EchoSphere.Users.Abstractions.csproj" />
 	</ItemGroup>
 
 </Project>
