--- a/src/EchoSphere.Web/EchoSphere.Web.csproj
+++ b/src/EchoSphere.Web/EchoSphere.Web.csproj
@@ -8,6 +8,7 @@
 
 	<ItemGroup>
 	  <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="8.0.8" />
+	  <PackageReference Include="System.Linq.Async" Version="6.0.1" />
 	</ItemGroup>
 
 	<ItemGroup>
