Implement initial posts functionality

--- a/src/EchoSphere.ApiGateway/EchoSphere.ApiGateway.csproj
+++ b/src/EchoSphere.ApiGateway/EchoSphere.ApiGateway.csproj
@@ -6,6 +6,7 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\EchoSphere.ApiGateway.Contracts\EchoSphere.ApiGateway.Contracts.csproj" />
+		<ProjectReference Include="..\EchoSphere.Posts.Client\EchoSphere.Posts.Client.csproj" />
 		<ProjectReference Include="..\EchoSphere.ServiceDefaults\EchoSphere.ServiceDefaults.csproj"/>
 		<ProjectReference Include="..\EchoSphere.Messages.Client\EchoSphere.Messages.Client.csproj" />
 		<ProjectReference Include="..\EchoSphere.Users.Client\EchoSphere.Users.Client.csproj" />
