--- a/src/EchoSphere.Users.Abstractions/EchoSphere.Users.Abstractions.csproj
+++ b/src/EchoSphere.Users.Abstractions/EchoSphere.Users.Abstractions.csproj
@@ -6,4 +6,16 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Dusharp" Version="0.3.0">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
+      <PackageReference Include="LanguageExt.Core" Version="4.4.9" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\EchoSphere.SharedModels\EchoSphere.SharedModels.csproj" />
+    </ItemGroup>
+
 </Project>
