--- a/src/EchoSphere.Posts.Api/EchoSphere.Posts.Api.csproj
+++ b/src/EchoSphere.Posts.Api/EchoSphere.Posts.Api.csproj
@@ -17,6 +17,7 @@
 	  <ProjectReference Include="..\EchoSphere.Infrastructure.Db\EchoSphere.Infrastructure.Db.csproj" />
 	  <ProjectReference Include="..\EchoSphere.Posts.Abstractions\EchoSphere.Posts.Abstractions.csproj" />
 	  <ProjectReference Include="..\EchoSphere.ServiceDefaults\EchoSphere.ServiceDefaults.csproj" />
+	  <ProjectReference Include="..\EchoSphere.SharedModels.LinqToDb\EchoSphere.SharedModels.LinqToDb.csproj" />
 	</ItemGroup>
 
 </Project>
