--- a/src/EchoSphere.Messages.Api/EchoSphere.Messages.Api.csproj
+++ b/src/EchoSphere.Messages.Api/EchoSphere.Messages.Api.csproj
@@ -17,6 +17,7 @@
 		<ProjectReference Include="..\EchoSphere.Domain.AspNetCore\EchoSphere.Domain.AspNetCore.csproj" />
 		<ProjectReference Include="..\EchoSphere.GrpcShared\EchoSphere.GrpcShared.csproj" />
 		<ProjectReference Include="..\EchoSphere.Infrastructure.Db\EchoSphere.Infrastructure.Db.csproj"/>
+		<ProjectReference Include="..\EchoSphere.Infrastructure.IntegrationEvents\EchoSphere.Infrastructure.IntegrationEvents.csproj" />
 		<ProjectReference Include="..\EchoSphere.Messages.Abstractions\EchoSphere.Messages.Abstractions.csproj"/>
 		<ProjectReference Include="..\EchoSphere.ServiceDefaults\EchoSphere.ServiceDefaults.csproj"/>
 		<ProjectReference Include="..\EchoSphere.Domain.LinqToDb\EchoSphere.Domain.LinqToDb.csproj" />
