--- a/src/EchoSphere.AppHost/EchoSphere.AppHost.csproj
+++ b/src/EchoSphere.AppHost/EchoSphere.AppHost.csproj
@@ -8,6 +8,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Aspire.Hosting.AppHost" Version="8.2.1" />
+		<PackageReference Include="Aspire.Hosting.Kafka" Version="8.2.1" />
 		<PackageReference Include="Aspire.Hosting.PostgreSQL" Version="8.2.1" />
 	</ItemGroup>
 
