--- a/src/EchoSphere.Infrastructure.Db/EchoSphere.Infrastructure.Db.csproj
+++ b/src/EchoSphere.Infrastructure.Db/EchoSphere.Infrastructure.Db.csproj
@@ -3,7 +3,7 @@
 	<ItemGroup>
 		<PackageReference Include="FluentMigrator.Runner.Postgres" Version="6.2.0"/>
 		<PackageReference Include="linq2db.AspNet" Version="5.4.1"/>
-		<PackageReference Include="Aspire.Npgsql" Version="8.2.1"/>
+		<PackageReference Include="Npgsql" Version="8.0.4" />
 	</ItemGroup>
 
 	<ItemGroup>
