--- a/src/EchoSphere.Messages.Api/appsettings.json
+++ b/src/EchoSphere.Messages.Api/appsettings.json
@@ -1,14 +1,19 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*",
-  "Kestrel": {
-    "EndpointDefaults": {
-      "Protocols": "Http2"
-    }
-  }
+	"IntegrationEvents": {
+		"ServiceName": "MessagesApi",
+		"ListenServiceNames": []
+	},
+	"Logging": {
+		"LogLevel": {
+			"Default": "Information",
+			"Microsoft.AspNetCore": "Warning",
+			"LinqToDB.Data": "Warning"
+		}
+	},
+	"AllowedHosts": "*",
+	"Kestrel": {
+		"EndpointDefaults": {
+			"Protocols": "Http2"
+		}
+	}
 }
