feat(Notifications): Implement basic notifications api

--- a/src/EchoSphere.Messages.Abstractions/EchoSphere.Messages.Abstractions.csproj
+++ b/src/EchoSphere.Messages.Abstractions/EchoSphere.Messages.Abstractions.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\EchoSphere.Infrastructure.IntegrationEvents\EchoSphere.Infrastructure.IntegrationEvents.csproj" />
       <ProjectReference Include="..\EchoSphere.Users.Abstractions\EchoSphere.Users.Abstractions.csproj" />
     </ItemGroup>
 
