--- a/src/EchoSphere.ApiGateway/EchoSphere.ApiGateway.csproj
+++ b/src/EchoSphere.ApiGateway/EchoSphere.ApiGateway.csproj
@@ -6,6 +6,7 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\EchoSphere.ApiGateway.Contracts\EchoSphere.ApiGateway.Contracts.csproj"/>
+		<ProjectReference Include="..\EchoSphere.Notifications.Client\EchoSphere.Notifications.Client.csproj" />
 		<ProjectReference Include="..\EchoSphere.Posts.Client\EchoSphere.Posts.Client.csproj"/>
 		<ProjectReference Include="..\EchoSphere.ServiceDefaults\EchoSphere.ServiceDefaults.csproj"/>
 		<ProjectReference Include="..\EchoSphere.Messages.Client\EchoSphere.Messages.Client.csproj"/>
@@ -13,7 +14,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.8"/>
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.10" />
 	</ItemGroup>
 
 </Project>
