fix(Projects): Add central package management for solution

--- a/src/EchoSphere.AppHost/EchoSphere.AppHost.csproj
+++ b/src/EchoSphere.AppHost/EchoSphere.AppHost.csproj
@@ -7,9 +7,9 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Aspire.Hosting.AppHost" Version="8.2.1" />
-		<PackageReference Include="Aspire.Hosting.Kafka" Version="8.2.1" />
-		<PackageReference Include="Aspire.Hosting.PostgreSQL" Version="8.2.1" />
+		<PackageReference Include="Aspire.Hosting.AppHost"/>
+		<PackageReference Include="Aspire.Hosting.Kafka"/>
+		<PackageReference Include="Aspire.Hosting.PostgreSQL"/>
 	</ItemGroup>
 
 	<ItemGroup>
