--- a/src/EchoSphere.Accounts.WebApp/EchoSphere.Accounts.WebApp.csproj
+++ b/src/EchoSphere.Accounts.WebApp/EchoSphere.Accounts.WebApp.csproj
@@ -5,10 +5,10 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Duende.IdentityServer.AspNetIdentity" Version="7.0.7" />
-		<PackageReference Include="Duende.IdentityServer.Storage" Version="7.0.7" />
-		<PackageReference Include="Duende.IdentityServer" Version="7.0.7" />
-		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.10" />
+		<PackageReference Include="Duende.IdentityServer.AspNetIdentity"/>
+		<PackageReference Include="Duende.IdentityServer.Storage"/>
+		<PackageReference Include="Duende.IdentityServer"/>
+		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server"/>
 	</ItemGroup>
 
 	<ItemGroup>
