--- a/src/EchoSphere.ApiGateway.Client/EchoSphere.ApiGateway.Client.csproj
+++ b/src/EchoSphere.ApiGateway.Client/EchoSphere.ApiGateway.Client.csproj
@@ -1,17 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-    <PropertyGroup>
-        <TargetFramework>net8.0</TargetFramework>
-        <ImplicitUsings>enable</ImplicitUsings>
-        <Nullable>enable</Nullable>
-    </PropertyGroup>
+	<ItemGroup>
+		<PackageReference Include="Refit.HttpClientFactory"/>
+	</ItemGroup>
 
-    <ItemGroup>
-      <PackageReference Include="Refit.HttpClientFactory" Version="7.2.1" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <ProjectReference Include="..\EchoSphere.ApiGateway.Contracts\EchoSphere.ApiGateway.Contracts.csproj" />
-    </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\EchoSphere.ApiGateway.Contracts\EchoSphere.ApiGateway.Contracts.csproj"/>
+	</ItemGroup>
 
 </Project>
