--- a/src/EchoSphere.ApiGateway/EchoSphere.ApiGateway.csproj
+++ b/src/EchoSphere.ApiGateway/EchoSphere.ApiGateway.csproj
@@ -14,7 +14,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.10" />
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer"/>
 	</ItemGroup>
 
 </Project>
