--- a/src/EchoSphere.Domain.Abstractions/EchoSphere.Domain.Abstractions.csproj
+++ b/src/EchoSphere.Domain.Abstractions/EchoSphere.Domain.Abstractions.csproj
@@ -1,13 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-    <PropertyGroup>
-        <TargetFramework>net8.0</TargetFramework>
-        <ImplicitUsings>enable</ImplicitUsings>
-        <Nullable>enable</Nullable>
-    </PropertyGroup>
-
-    <ItemGroup>
-      <PackageReference Include="LanguageExt.Core" Version="4.4.9" />
-    </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="LanguageExt.Core"/>
+	</ItemGroup>
 
 </Project>
