--- a/src/EchoSphere.Notifications.Abstractions/EchoSphere.Notifications.Abstractions.csproj
+++ b/src/EchoSphere.Notifications.Abstractions/EchoSphere.Notifications.Abstractions.csproj
@@ -1,11 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-  <ItemGroup>
-    <ProjectReference Include="..\EchoSphere.Domain.Abstractions\EchoSphere.Domain.Abstractions.csproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="Dusharp" Version="0.5.2">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\EchoSphere.Domain.Abstractions\EchoSphere.Domain.Abstractions.csproj"/>
+	</ItemGroup>
+
+	<ItemGroup>
+		<PackageReference Include="Dusharp"/>
+	</ItemGroup>
 </Project>
