--- a/src/EchoSphere.Notifications.Api/EchoSphere.Notifications.Api.csproj
+++ b/src/EchoSphere.Notifications.Api/EchoSphere.Notifications.Api.csproj
@@ -8,7 +8,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Grpc.AspNetCore" Version="2.66.0"/>
+		<PackageReference Include="Grpc.AspNetCore"/>
 	</ItemGroup>
 
 	<ItemGroup>
