--- a/src/EchoSphere.Notifications.Client/EchoSphere.Notifications.Client.csproj
+++ b/src/EchoSphere.Notifications.Client/EchoSphere.Notifications.Client.csproj
@@ -4,12 +4,9 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Google.Protobuf" Version="3.28.2" />
-		<PackageReference Include="Grpc.Net.Client" Version="2.66.0" />
-		<PackageReference Include="Grpc.Tools" Version="2.67.0">
-			<PrivateAssets>all</PrivateAssets>
-			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-		</PackageReference>
+		<PackageReference Include="Google.Protobuf"/>
+		<PackageReference Include="Grpc.Net.Client"/>
+		<PackageReference Include="Grpc.Tools"/>
 	</ItemGroup>
 
 	<ItemGroup>
