--- a/src/EchoSphere.Posts.Abstractions/EchoSphere.Posts.Abstractions.csproj
+++ b/src/EchoSphere.Posts.Abstractions/EchoSphere.Posts.Abstractions.csproj
@@ -1,21 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-    <PropertyGroup>
-        <TargetFramework>net8.0</TargetFramework>
-        <ImplicitUsings>enable</ImplicitUsings>
-        <Nullable>enable</Nullable>
-    </PropertyGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\EchoSphere.Infrastructure.IntegrationEvents\EchoSphere.Infrastructure.IntegrationEvents.csproj"/>
+		<ProjectReference Include="..\EchoSphere.Users.Abstractions\EchoSphere.Users.Abstractions.csproj"/>
+	</ItemGroup>
 
-    <ItemGroup>
-      <ProjectReference Include="..\EchoSphere.Infrastructure.IntegrationEvents\EchoSphere.Infrastructure.IntegrationEvents.csproj" />
-      <ProjectReference Include="..\EchoSphere.Users.Abstractions\EchoSphere.Users.Abstractions.csproj" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <PackageReference Include="Dusharp" Version="0.5.2">
-        <PrivateAssets>all</PrivateAssets>
-        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-      </PackageReference>
-    </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Dusharp"/>
+	</ItemGroup>
 
 </Project>
