--- a/src/EchoSphere.Users.Abstractions/EchoSphere.Users.Abstractions.csproj
+++ b/src/EchoSphere.Users.Abstractions/EchoSphere.Users.Abstractions.csproj
@@ -1,16 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-	<PropertyGroup>
-		<TargetFramework>net8.0</TargetFramework>
-		<ImplicitUsings>enable</ImplicitUsings>
-		<Nullable>enable</Nullable>
-	</PropertyGroup>
-
 	<ItemGroup>
-		<PackageReference Include="Dusharp" Version="0.5.2">
-			<PrivateAssets>all</PrivateAssets>
-			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-		</PackageReference>
+		<PackageReference Include="Dusharp"/>
 	</ItemGroup>
 
 	<ItemGroup>
