--- a/src/EchoSphere.Users.Api/EchoSphere.Users.Api.csproj
+++ b/src/EchoSphere.Users.Api/EchoSphere.Users.Api.csproj
@@ -9,9 +9,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Grpc.AspNetCore" Version="2.66.0" />
-		<PackageReference Include="Grpc.StatusProto" Version="2.66.0" />
-		<PackageReference Include="System.Linq.Async" Version="6.0.1" />
+		<PackageReference Include="Grpc.AspNetCore"/>
+		<PackageReference Include="Grpc.StatusProto"/>
+		<PackageReference Include="System.Linq.Async"/>
 	</ItemGroup>
 
 	<ItemGroup>
