--- a/src/EchoSphere.Web/EchoSphere.Web.csproj
+++ b/src/EchoSphere.Web/EchoSphere.Web.csproj
@@ -1,19 +1,19 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
 	<ItemGroup>
-		<ProjectReference Include="..\EchoSphere.ApiGateway.Client\EchoSphere.ApiGateway.Client.csproj" />
-		<ProjectReference Include="..\EchoSphere.BlazorShared\EchoSphere.BlazorShared.csproj" />
+		<ProjectReference Include="..\EchoSphere.ApiGateway.Client\EchoSphere.ApiGateway.Client.csproj"/>
+		<ProjectReference Include="..\EchoSphere.BlazorShared\EchoSphere.BlazorShared.csproj"/>
 		<ProjectReference Include="..\EchoSphere.ServiceDefaults\EchoSphere.ServiceDefaults.csproj"/>
 	</ItemGroup>
 
 	<ItemGroup>
-	  <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="8.0.10" />
-	  <PackageReference Include="System.Linq.Async" Version="6.0.1" />
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect"/>
+		<PackageReference Include="System.Linq.Async"/>
 	</ItemGroup>
 
 	<ItemGroup>
-	  <_ContentIncludedByDefault Remove="wwwroot\bootstrap\bootstrap.min.css" />
-	  <_ContentIncludedByDefault Remove="wwwroot\bootstrap\bootstrap.min.css.map" />
+		<_ContentIncludedByDefault Remove="wwwroot\bootstrap\bootstrap.min.css"/>
+		<_ContentIncludedByDefault Remove="wwwroot\bootstrap\bootstrap.min.css.map"/>
 	</ItemGroup>
 
 </Project>
