--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -2,7 +2,6 @@
 	<PropertyGroup>
 		<ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
 	</PropertyGroup>
-
 	<ItemGroup>
 		<PackageVersion Include="Dusharp" Version="0.5.3">
 			<PrivateAssets>all</PrivateAssets>
@@ -10,6 +9,9 @@
 		</PackageVersion>
 		<PackageVersion Include="Grpc.AspNetCore" Version="2.66.0"/>
 		<PackageVersion Include="Grpc.StatusProto" Version="2.66.0"/>
+		<PackageVersion Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="8.0.0"/>
+		<PackageVersion Include="Microsoft.Extensions.Http" Version="8.0.1"/>
+		<PackageVersion Include="Microsoft.Extensions.ServiceDiscovery.Yarp" Version="8.2.1"/>
 		<PackageVersion Include="System.Linq.Async" Version="6.0.1"/>
 		<PackageVersion Include="Google.Protobuf" Version="3.28.2"/>
 		<PackageVersion Include="Grpc.Net.Client" Version="2.66.0"/>
@@ -45,8 +47,8 @@
 		<PackageVersion Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.10" PrivateAssets="all"/>
 		<PackageVersion Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="8.0.10"/>
 		<PackageVersion Include="Extensions.Hosting.AsyncInitialization" Version="3.0.1"/>
+		<PackageVersion Include="Microsoft.AspNetCore.Components.Authorization" Version="8.0.10"/>
 	</ItemGroup>
-
 	<!-- Tests packages -->
 	<ItemGroup>
 		<PackageVersion Include="coverlet.collector" Version="6.0.2">
@@ -62,7 +64,6 @@
 		</PackageVersion>
 		<PackageVersion Include="Aspire.Hosting.Testing" Version="8.2.1"/>
 	</ItemGroup>
-
 	<ItemGroup>
 		<GlobalPackageVersion Include="StyleCop.Analyzers" Version="1.2.0-beta.556" PrivateAssets="all"/>
 	</ItemGroup>
