--- a/src/EchoSphere.BlazorShared/EchoSphere.BlazorShared.csproj
+++ b/src/EchoSphere.BlazorShared/EchoSphere.BlazorShared.csproj
@@ -1,12 +1,19 @@
 <Project Sdk="Microsoft.NET.Sdk.Razor">
 
+	<PropertyGroup>
+		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+	</PropertyGroup>
+
 	<ItemGroup>
 		<SupportedPlatform Include="browser"/>
 	</ItemGroup>
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore.Components.Web"/>
+		<PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" />
+		<PackageReference Include="Microsoft.Extensions.Http" />
 		<PackageReference Include="MudBlazor"/>
+		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly"/>
 	</ItemGroup>
 
 	<ItemGroup>
