--- a/src/EchoSphere.Web.Client/EchoSphere.Web.Client.csproj
+++ b/src/EchoSphere.Web.Client/EchoSphere.Web.Client.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
+﻿<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
 
 	<PropertyGroup>
 		<NoDefaultLaunchSettingsFile>true</NoDefaultLaunchSettingsFile>
@@ -12,9 +12,13 @@
 	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly"/>
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer"/>
+		<PackageReference Include="System.Linq.Async"/>
+		<PackageReference Include="Microsoft.AspNetCore.Components.Authorization"/>
+		<PackageReference Include="Microsoft.Extensions.Http.Resilience"/>
 	</ItemGroup>
 
 	<ItemGroup>
+		<ProjectReference Include="..\EchoSphere.ApiGateway.Client\EchoSphere.ApiGateway.Client.csproj" />
 		<ProjectReference Include="..\EchoSphere.BlazorShared\EchoSphere.BlazorShared.csproj"/>
 	</ItemGroup>
 
