--- a/src/EchoSphere.Web/EchoSphere.Web.csproj
+++ b/src/EchoSphere.Web/EchoSphere.Web.csproj
@@ -1,19 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
 	<ItemGroup>
-		<ProjectReference Include="..\EchoSphere.ApiGateway.Client\EchoSphere.ApiGateway.Client.csproj"/>
-		<ProjectReference Include="..\EchoSphere.BlazorShared\EchoSphere.BlazorShared.csproj"/>
+		<ProjectReference Include="..\EchoSphere.Infrastructure.Hosting\EchoSphere.Infrastructure.Hosting.csproj" />
 		<ProjectReference Include="..\EchoSphere.ServiceDefaults\EchoSphere.ServiceDefaults.csproj"/>
+		<ProjectReference Include="..\EchoSphere.Web.Client\EchoSphere.Web.Client.csproj"/>
 	</ItemGroup>
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect"/>
-		<PackageReference Include="System.Linq.Async"/>
-	</ItemGroup>
-
-	<ItemGroup>
-		<_ContentIncludedByDefault Remove="wwwroot\bootstrap\bootstrap.min.css"/>
-		<_ContentIncludedByDefault Remove="wwwroot\bootstrap\bootstrap.min.css.map"/>
+		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server"/>
+		<PackageReference Include="Microsoft.Extensions.ServiceDiscovery.Yarp"/>
 	</ItemGroup>
 
 </Project>
