feat(Web app): Initial UI

--- a/src/EchoSphere.Web/EchoSphere.Web.csproj
+++ b/src/EchoSphere.Web/EchoSphere.Web.csproj
@@ -12,4 +12,8 @@
 		<PackageReference Include="Microsoft.Extensions.ServiceDiscovery.Yarp"/>
 	</ItemGroup>
 
+	<ItemGroup>
+	  <_ContentIncludedByDefault Remove="wwwroot\images\avatar.avif" />
+	</ItemGroup>
+
 </Project>
