fix: Update projects to .NET 9

--- a/.editorconfig
+++ b/.editorconfig
@@ -9,6 +9,14 @@ indent_style = tab
 indent_size = 4
 trim_trailing_whitespace = true
 
+[*.csproj]
+indent_style = tab
+indent_size = 4
+
+[*.props]
+indent_style = tab
+indent_size = 4
+
 [*.yml]
 indent_style = space
 indent_size = 2
