--- a/src/EchoSphere.Web.Client/EchoSphere.Web.Client.csproj
+++ b/src/EchoSphere.Web.Client/EchoSphere.Web.Client.csproj
@@ -20,6 +20,8 @@
 	<ItemGroup>
 		<ProjectReference Include="..\EchoSphere.ApiGateway.Client\EchoSphere.ApiGateway.Client.csproj" />
 		<ProjectReference Include="..\EchoSphere.BlazorShared\EchoSphere.BlazorShared.csproj"/>
+		<ProjectReference Include="..\EchoSphere.Messages.Abstractions\EchoSphere.Messages.Abstractions.csproj" />
+		<ProjectReference Include="..\EchoSphere.RealtimeNotifications.Client\EchoSphere.RealtimeNotifications.Client.csproj" />
 	</ItemGroup>
 
 </Project>
