--- a/src/EchoSphere.GrpcClientShared/EchoSphere.GrpcClientShared.csproj
+++ b/src/EchoSphere.GrpcClientShared/EchoSphere.GrpcClientShared.csproj
@@ -4,4 +4,8 @@
 		<PackageReference Include="Grpc.StatusProto"/>
 		<PackageReference Include="LanguageExt.Core"/>
 	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\EchoSphere.Domain.Abstractions\EchoSphere.Domain.Abstractions.csproj" />
+	</ItemGroup>
 </Project>
