--- a/src/EchoSphere.AppHost/EchoSphere.AppHost.csproj
+++ b/src/EchoSphere.AppHost/EchoSphere.AppHost.csproj
@@ -10,6 +10,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Aspire.Hosting.AppHost"/>
+		<PackageReference Include="Aspire.Hosting.Garnet" />
 		<PackageReference Include="Aspire.Hosting.Kafka"/>
 		<PackageReference Include="Aspire.Hosting.PostgreSQL"/>
 	</ItemGroup>
