--- a/src/EchoSphere.ServiceDefaults/EchoSphere.ServiceDefaults.csproj
+++ b/src/EchoSphere.ServiceDefaults/EchoSphere.ServiceDefaults.csproj
@@ -6,7 +6,11 @@
 
 	<ItemGroup>
 		<FrameworkReference Include="Microsoft.AspNetCore.App"/>
+	</ItemGroup>
 
+	<ItemGroup>
+		<PackageReference Include="Aspire.StackExchange.Redis.DistributedCaching"/>
+		<PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" />
 		<PackageReference Include="Microsoft.Extensions.Http.Resilience"/>
 		<PackageReference Include="Microsoft.Extensions.ServiceDiscovery"/>
 		<PackageReference Include="OpenTelemetry.Exporter.OpenTelemetryProtocol"/>
@@ -14,6 +18,13 @@
 		<PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore"/>
 		<PackageReference Include="OpenTelemetry.Instrumentation.Http"/>
 		<PackageReference Include="OpenTelemetry.Instrumentation.Runtime"/>
+		<PackageReference Include="ZiggyCreatures.FusionCache" />
+		<PackageReference Include="ZiggyCreatures.FusionCache.OpenTelemetry" />
+		<PackageReference Include="ZiggyCreatures.FusionCache.Serialization.SystemTextJson" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\EchoSphere.Domain.Abstractions\EchoSphere.Domain.Abstractions.csproj" />
 	</ItemGroup>
 
 </Project>
