--- a/src/EchoSphere.Users.Client/EchoSphere.Users.Client.csproj
+++ b/src/EchoSphere.Users.Client/EchoSphere.Users.Client.csproj
@@ -8,6 +8,7 @@
 		<PackageReference Include="Google.Protobuf"/>
 		<PackageReference Include="Grpc.Net.Client"/>
 		<PackageReference Include="Grpc.Tools"/>
+		<PackageReference Include="ZiggyCreatures.FusionCache" />
 	</ItemGroup>
 
 	<ItemGroup>
