--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -16,6 +16,7 @@
 		<PackageVersion Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="9.0.1"/>
 		<PackageVersion Include="Microsoft.Extensions.Http" Version="9.0.1"/>
 		<PackageVersion Include="Microsoft.Extensions.ServiceDiscovery.Yarp" Version="9.0.0"/>
+		<PackageVersion Include="OpenTelemetry.Instrumentation.GrpcNetClient" Version="1.10.0-beta.1"/>
 		<PackageVersion Include="System.Linq.Async" Version="6.0.1"/>
 		<PackageVersion Include="Google.Protobuf" Version="3.29.3"/>
 		<PackageVersion Include="Grpc.Net.Client" Version="2.67.0"/>
