--- a/src/EchoSphere.ServiceDefaults/EchoSphere.ServiceDefaults.csproj
+++ b/src/EchoSphere.ServiceDefaults/EchoSphere.ServiceDefaults.csproj
@@ -16,6 +16,7 @@
 		<PackageReference Include="OpenTelemetry.Exporter.OpenTelemetryProtocol"/>
 		<PackageReference Include="OpenTelemetry.Extensions.Hosting"/>
 		<PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore"/>
+		<PackageReference Include="OpenTelemetry.Instrumentation.GrpcNetClient" />
 		<PackageReference Include="OpenTelemetry.Instrumentation.Http"/>
 		<PackageReference Include="OpenTelemetry.Instrumentation.Runtime"/>
 		<PackageReference Include="ZiggyCreatures.FusionCache" />
@@ -25,6 +26,7 @@
 
 	<ItemGroup>
 	  <ProjectReference Include="..\EchoSphere.Domain.Abstractions\EchoSphere.Domain.Abstractions.csproj" />
+	  <ProjectReference Include="..\EchoSphere.Infrastructure.IntegrationEvents\EchoSphere.Infrastructure.IntegrationEvents.csproj" />
 	</ItemGroup>
 
 </Project>
