feat(Realtime notifications): Add basic realtime notifications

--- a/src/EchoSphere.RealtimeNotifications.Api/EchoSphere.RealtimeNotifications.Api.csproj
+++ b/src/EchoSphere.RealtimeNotifications.Api/EchoSphere.RealtimeNotifications.Api.csproj
@@ -2,6 +2,7 @@
 	<ItemGroup>
 		<ProjectReference Include="..\EchoSphere.Domain.AspNetCore\EchoSphere.Domain.AspNetCore.csproj" />
 		<ProjectReference Include="..\EchoSphere.Messages.Client\EchoSphere.Messages.Client.csproj"/>
+		<ProjectReference Include="..\EchoSphere.Posts.Abstractions\EchoSphere.Posts.Abstractions.csproj" />
 		<ProjectReference Include="..\EchoSphere.ServiceDefaults\EchoSphere.ServiceDefaults.csproj"/>
 		<ProjectReference Include="..\EchoSphere.Users.Client\EchoSphere.Users.Client.csproj" />
 	</ItemGroup>
