--- a/src/EchoSphere.RealtimeNotifications.Api/appsettings.json
+++ b/src/EchoSphere.RealtimeNotifications.Api/appsettings.json
@@ -2,7 +2,7 @@
 	"IntegrationEvents": {
 		"DisableProducer": true,
 		"ServiceName": "RealtimeNotificationsApi",
-		"ListenServiceNames": ["MessagesApi"]
+		"ListenServiceNames": ["MessagesApi", "PostsApi"]
 	},
 	"Logging": {
 		"LogLevel": {
