--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -3,74 +3,75 @@
 		<ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
 	</PropertyGroup>
 	<ItemGroup>
-		<PackageVersion Include="Aspire.Hosting.Garnet" Version="9.0.0"/>
-		<PackageVersion Include="Aspire.StackExchange.Redis.DistributedCaching" Version="9.0.0"/>
+		<PackageVersion Include="Aspire.Hosting.Garnet" Version="9.1.0"/>
+		<PackageVersion Include="Aspire.StackExchange.Redis.DistributedCaching" Version="9.1.0"/>
 		<PackageVersion Include="Dusharp" Version="0.6.2">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageVersion>
 		<PackageVersion Include="Grpc.AspNetCore" Version="2.67.0"/>
 		<PackageVersion Include="Grpc.StatusProto" Version="2.67.0"/>
-		<PackageVersion Include="Microsoft.AspNetCore.SignalR.Client" Version="9.0.1"/>
-		<PackageVersion Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="9.0.1"/>
-		<PackageVersion Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="9.0.1"/>
-		<PackageVersion Include="Microsoft.Extensions.Http" Version="9.0.1"/>
-		<PackageVersion Include="Microsoft.Extensions.ServiceDiscovery.Yarp" Version="9.0.0"/>
+		<PackageVersion Include="Microsoft.AspNetCore.SignalR.Client" Version="9.0.2"/>
+		<PackageVersion Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="9.0.2"/>
+		<PackageVersion Include="Microsoft.Extensions.Http" Version="9.0.2"/>
+		<PackageVersion Include="Microsoft.Extensions.ServiceDiscovery.Yarp" Version="9.1.0"/>
 		<PackageVersion Include="OpenTelemetry.Instrumentation.GrpcNetClient" Version="1.10.0-beta.1"/>
+		<PackageVersion Include="R3" Version="1.3.0"/>
+		<PackageVersion Include="R3Extensions.BlazorWebAssembly" Version="1.3.0"/>
 		<PackageVersion Include="System.Linq.Async" Version="6.0.1"/>
 		<PackageVersion Include="Google.Protobuf" Version="3.29.3"/>
 		<PackageVersion Include="Grpc.Net.Client" Version="2.67.0"/>
-		<PackageVersion Include="Grpc.Tools" Version="2.69.0">
+		<PackageVersion Include="Grpc.Tools" Version="2.70.0">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageVersion>
-		<PackageVersion Include="MudBlazor" Version="7.16.0"/>
+		<PackageVersion Include="MudBlazor" Version="8.3.0"/>
 		<PackageVersion Include="LanguageExt.Core" Version="4.4.9"/>
 		<PackageVersion Include="linq2db.AspNet" Version="5.4.1"/>
 		<PackageVersion Include="Grpc.AspNetCore.Server.ClientFactory" Version="2.67.0"/>
 		<PackageVersion Include="Refit.HttpClientFactory" Version="8.0.0"/>
-		<PackageVersion Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.1"/>
-		<PackageVersion Include="Aspire.Hosting.AppHost" Version="9.0.0"/>
-		<PackageVersion Include="Aspire.Hosting.Kafka" Version="9.0.0"/>
-		<PackageVersion Include="Aspire.Hosting.PostgreSQL" Version="9.0.0"/>
-		<PackageVersion Include="Microsoft.AspNetCore.Components.Web" Version="9.0.1"/>
-		<PackageVersion Include="Microsoft.Extensions.Http.Resilience" Version="9.1.0"/>
-		<PackageVersion Include="Microsoft.Extensions.ServiceDiscovery" Version="9.0.0"/>
-		<PackageVersion Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.11.0"/>
-		<PackageVersion Include="OpenTelemetry.Extensions.Hosting" Version="1.11.0"/>
-		<PackageVersion Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.10.1"/>
-		<PackageVersion Include="OpenTelemetry.Instrumentation.Http" Version="1.10.0"/>
-		<PackageVersion Include="OpenTelemetry.Instrumentation.Runtime" Version="1.10.0"/>
-		<PackageVersion Include="Aspire.Confluent.Kafka" Version="9.0.0"/>
+		<PackageVersion Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.2"/>
+		<PackageVersion Include="Aspire.Hosting.AppHost" Version="9.1.0"/>
+		<PackageVersion Include="Aspire.Hosting.Kafka" Version="9.1.0"/>
+		<PackageVersion Include="Aspire.Hosting.PostgreSQL" Version="9.1.0"/>
+		<PackageVersion Include="Microsoft.AspNetCore.Components.Web" Version="9.0.2"/>
+		<PackageVersion Include="Microsoft.Extensions.Http.Resilience" Version="9.2.0"/>
+		<PackageVersion Include="Microsoft.Extensions.ServiceDiscovery" Version="9.1.0"/>
+		<PackageVersion Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.11.1"/>
+		<PackageVersion Include="OpenTelemetry.Extensions.Hosting" Version="1.11.1"/>
+		<PackageVersion Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.11.0"/>
+		<PackageVersion Include="OpenTelemetry.Instrumentation.Http" Version="1.11.0"/>
+		<PackageVersion Include="OpenTelemetry.Instrumentation.Runtime" Version="1.11.0"/>
+		<PackageVersion Include="Aspire.Confluent.Kafka" Version="9.1.0"/>
 		<PackageVersion Include="FluentMigrator.Runner.Postgres" Version="6.2.0"/>
-		<PackageVersion Include="Npgsql" Version="9.0.2"/>
+		<PackageVersion Include="Npgsql" Version="9.0.3"/>
 		<PackageVersion Include="Duende.IdentityServer.AspNetIdentity" Version="7.1.0"/>
 		<PackageVersion Include="Duende.IdentityServer.Storage" Version="7.1.0"/>
 		<PackageVersion Include="Duende.IdentityServer" Version="7.1.0"/>
-		<PackageVersion Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="9.0.1"/>
-		<PackageVersion Include="Microsoft.AspNetCore.Components.WebAssembly" Version="9.0.1"/>
-		<PackageVersion Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="9.0.1" PrivateAssets="all"/>
-		<PackageVersion Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="9.0.1"/>
+		<PackageVersion Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="9.0.2"/>
+		<PackageVersion Include="Microsoft.AspNetCore.Components.WebAssembly" Version="9.0.2"/>
+		<PackageVersion Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="9.0.2" PrivateAssets="all"/>
+		<PackageVersion Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="9.0.2"/>
 		<PackageVersion Include="Extensions.Hosting.AsyncInitialization" Version="3.0.1"/>
-		<PackageVersion Include="Microsoft.AspNetCore.Components.Authorization" Version="9.0.1"/>
-		<PackageVersion Include="ZiggyCreatures.FusionCache" Version="1.4.1"/>
-		<PackageVersion Include="ZiggyCreatures.FusionCache.OpenTelemetry" Version="1.4.1"/>
-		<PackageVersion Include="ZiggyCreatures.FusionCache.Serialization.SystemTextJson" Version="1.4.1"/>
+		<PackageVersion Include="Microsoft.AspNetCore.Components.Authorization" Version="9.0.2"/>
+		<PackageVersion Include="ZiggyCreatures.FusionCache" Version="2.1.0"/>
+		<PackageVersion Include="ZiggyCreatures.FusionCache.OpenTelemetry" Version="2.1.0"/>
+		<PackageVersion Include="ZiggyCreatures.FusionCache.Serialization.SystemTextJson" Version="2.1.0"/>
 	</ItemGroup>
 	<!-- Tests packages -->
 	<ItemGroup>
-		<PackageVersion Include="coverlet.collector" Version="6.0.3">
+		<PackageVersion Include="coverlet.collector" Version="6.0.4">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageVersion>
-		<PackageVersion Include="FluentAssertions" Version="8.0.0"/>
-		<PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.12.0"/>
+		<PackageVersion Include="FluentAssertions" Version="7.2.0"/>
+		<PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.13.0"/>
 		<PackageVersion Include="xunit" Version="2.9.3"/>
-		<PackageVersion Include="xunit.runner.visualstudio" Version="3.0.1">
+		<PackageVersion Include="xunit.runner.visualstudio" Version="3.0.2">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageVersion>
-		<PackageVersion Include="Aspire.Hosting.Testing" Version="9.0.0"/>
+		<PackageVersion Include="Aspire.Hosting.Testing" Version="9.1.0"/>
 	</ItemGroup>
 	<ItemGroup>
 		<GlobalPackageVersion Include="StyleCop.Analyzers" Version="1.2.0-beta.556" PrivateAssets="all"/>
